ndb - bug#57522 - make last step of micro gcp syncronous to avoid rare race with master take-over